[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11==2.11.1"]
build-backend = "scikit_build_core.build"


[project]
name = "pycolmap"
version = "0.5.0"
description="COLMAP bindings"
readme = "README.md"
authors = [
  { name = "Mihai Dusmanu", email = "mihai.dusmanu@microsoft.com" },
  { name = "Paul-Edouard Sarlin", email = "psarlin@ethz.ch" },
  { name = "Philipp Lindenberger", email = "plindenbe@ethz.ch" },
]
license = {file = "LICENSE"}
urls = {Repository = "https://github.com/colmap/pycolmap"}
requires-python = ">=3.7"
dependencies = ["numpy"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true


[tool.cibuildwheel]
build = "cp3{8,9,10,11}-{macosx,manylinux}*"
archs = ["auto64"]
test-command = "python -c 'import pycolmap; print(pycolmap.__version__)'"

[tool.cibuildwheel.linux]
before-all = "./package/install-colmap-centos.sh"
config-settings = "cmake.define.EIGEN3_INCLUDE_DIRS=eigen"

[tool.cibuildwheel.macos]
before-all = "./package/install-colmap-macos.sh"
